--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oClmbfwe&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nRRdoMwA'>Benefitfocus Careers - Product Manager</a></h5> 
+<p><span class="badge badge-light">Charleston, South Carolina</span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698379550-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
@@ -196,7 +200,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/flagshipcredit/job/oiLQafwN'>Flagship Credit Acceptance Careers - Product Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/flagshipcredit/job/oiLQafwN'>Flagship Credit Acceptance Careers - Product Manager</a></h5> 
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -234,6 +238,11 @@
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
+<h5><a href='https://jobs.jobvite.com/csi360/job/oNOkbfwQ'>Cardiovascular Systems, Inc. Careers - IT Product Manager ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 17, 2019 ... ... supervisory or team leader experience for enterprise systems; Experience with 
+online education programs and Physician customer relationship management?...</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ooYSafw8&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=n1VKnMwk'>ServiceNow Careers - Staff Product Manager, Digital Talent Experiences - Core HCM</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  San Diego, California  Santa Clara, CASan Diego, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
@@ -254,7 +263,7 @@
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ayla-networks/job/othebfwT'>Ayla Networks Careers - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ayla-networks/job/othebfwT'>Ayla Networks Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Milpitas</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -266,7 +275,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PointsInternational/743999698407469-product-designer'>Points International Product Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PointsInternational/743999698407469-product-designer'>Points International Product Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -290,7 +299,7 @@
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://joinoyster.recruitee.com/o/product-manager'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://joinoyster.recruitee.com/o/product-manager'>
       Product Manager - Oyster Financial Inc 
     </a></h5> 
 <p><span class="badge badge-light">Mexico Mexico</span></p>
@@ -331,7 +340,7 @@ and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</
 <p><span class="badge badge-light">New York, NY     New York City</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://snapsheet.applytojob.com/apply/vVlz52k6RR/Product-Manager'>Product Manager - Snapsheet - Career Page</a></h5> 
+<h5><a href='http://snapsheet.applytojob.com/apply/vVlz52k6RR/Product-Manager'>Product Manager - Snapsheet - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -351,7 +360,7 @@ and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</
 <p><span class="badge badge-light">Prague, Czech Republic</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://producthire.net/job/product-designer-spotify-free/'>Product Designer, Spotify Free | PRODUCTHIRE.NET</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/product-designer-spotify-free/'>Product Designer, Spotify Free | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">New York, USA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -446,14 +455,6 @@ and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</
     </a></h5> 
 <p><span class="badge badge-light">M?nchen</span></p>
 <p>Posted on: 2019-10-29</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-fr/job/oN0rbfw9'>Carri?res Trek Bicycle - Trip Design Product Manager</a></h5> 
-<p><span class="badge badge-light">Madison, Wisconsin  Madison, Wisconsin</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oyqobfwh&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=n17VmMwG'>Guidewire Software, Inc. Careers - Senior Product Manager, Digital Apps - Dublin, Ireland</a></h5> 
-<p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
-<p>Posted on:: 2019-10-29</p>
 <hr/>
 
 
